# DrawBot

./: .gitignore  README.md  Report.md  Working.md  calibrate.py  dobot-api.md  image_profile.py  main.py  main_cp.py  main_cp_v2.py  main_cp_v3.py  pyproject.toml  requirements.txt
docs/: incident-pydobot-none-response.md
pydobot/: basic_example.py  setup.py
pydobot/pydobot/: dobot.py  message.py
pydobot/pydobot/enums/: CommunicationProtocolIDs.py
