[project]
name = "dobot-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python",
    "matplotlib",
    "numpy",
    "pyserial",
    "scikit-image",
    "scipy",
    "sknw @ git+https://github.com/yxdragon/sknw.git",
    "pydobot",
    "vpype>=1.15.0",
]

[tool.setuptools]
packages = []

[tool.uv.sources]
pydobot = { path = "pydobot", editable = false }
